--- a/ibl5/themes/IBL/style/style.css
+++ b/ibl5/themes/IBL/style/style.css
@@ -3391,6 +3391,8 @@ table.sortable thead th {
   }
   .ibl-team-cell--colored {
     text-align: center !important;
+    padding-left: 0.5rem !important;
+    padding-right: 0.5rem !important;
   }
   .ibl-team-cell--colored .ibl-team-cell__name {
     justify-content: center;
